fix officer alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,3 +15,9 @@
 .quote {
   font-style: italic;
 }
+
+.single-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
